gitops/manifests/hermes/hermes-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-webui
  namespace: hermes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hermes-webui
  ports:
    - name: http
      port: 8787
      targetPort: 8787
      protocol: TCP
