gitops/manifests/hermes/hermes-webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-webui
  namespace: hermes
  annotations:
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: hermes-webui
      port:
        name: http
  tls:
    - hosts:
        - hermes-ui
